--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(dsaa C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(dsaa main.c SeqList/C/main.c SeqList/C/main.h LinkList/C/main.c LinkList/C/main.h Stack/C/LinkStack/main.c Stack/C/LinkStack/main.h)
+add_executable(dsaa main.c SeqList/C/main.c SeqList/C/main.h LinkList/C/main.c LinkList/C/main.h Stack/C/LinkStack/main.c Stack/C/LinkStack/main.h Stack/C/SeqStack/main.c Stack/C/SeqStack/main.h)
